# claude-code

./: .gitignore  Claude code prompts.txt
ts-showcase/: CLAUDE.md  README.md  pyproject.toml
ts-showcase/.claude/: settings.json
ts-showcase/.claude/agent-memory/code-quality-reviewer/: MEMORY.md  project_standards.md
ts-showcase/.claude/agents/: code-quality-reviewer.md  model-correctness-reviewer.md
ts-showcase/.claude/commands/: forecast.md
ts-showcase/.claude/hooks/: ruff-fix.sh
ts-showcase/.claude/skills/ts-forecasting/: SKILL.md
ts-showcase/.claude/skills/ts-forecasting/scripts/: baselines.py
ts-showcase/notebooks/: ch11_hierarchical_forecasting.ipynb  demo.ipynb
ts-showcase/src/tsshowcase/: __init__.py  data.py  eda.py  models.py
ts-showcase/tests/: test_data.py  test_eda.py  test_models.py
